--- a/assets/section-footer.css
+++ b/assets/section-footer.css
@@ -23,6 +23,10 @@
   font-family: var(--font-heading-family);
 }
 
+.footer-block {
+  color: rgb(var(--color-foreground));
+}
+
 #FooterCountryLabel {
   margin-bottom: 0px;
 }
@@ -40,7 +44,7 @@
 .color-basic-dark {
   /* background-color: var(--color-scheme-bg); */
   background-color: rgb(var(--color-background-2));
-  color: white;
+  /* color: white; */
 }
 .color-basic-dark #large-footer-logo {
   display: none;
@@ -49,7 +53,7 @@
 .color-bold-dark {
   /* background-color: var(--color-scheme-bg); */
   background-color: rgb(var(--color-background-2));
-  color: white;
+  /* color: white; */
 }
 
 .color-bold-accent {
